Fri May  2 19:07:11 1997  Gary Houston  <ghouston@actrix.gen.nz>

	* eq.c (scm_equal_p): use SCM_TYP7SD (y) not SCM_TYP7SD (x).

Thu May  1 17:01:45 1997  Jim Blandy  <jimb@floss.cyclic.com>

	* Makefile.am (check-local): New target, which causes 'make check'
 	to run gh_test_c and gh_test_repl, with some trivial input.
	* Makefile.in: Rgnrtd.

Tue Apr 29 19:00:40 1997  Marius Vollmer  <mvo@zagadka.ping.de>

	* dynl.c (print_dynl_obj): Indicate whether the dynamic object has
 	been unlinked.

Mon Apr 28 06:10:14 1997  Gary Houston  <ghouston@actrix.gen.nz>

	* async.c (scm_sys_tick_async_thunk): commented out.  I'm not
	sure how this was supposed to work.
	(scm_async_click): don't send SCM_TICK_SIGNAL.
	(scm_init_async): don't initialize %tick-thunk.

	* the following change doesn't affect the Scheme interface:
 	gc-thunk is called at the end of garbage collection.  however it's
 	no longer implemented by pretending it's a signal.
	
	* gc.c (scm_gc_end): don't call scm_take_signal.  instead mark the
	system async corresponding to scm_gc_thunk.
	* async.h: declare scm_gc_async.
	* async.c (scm_sys_gc_async_thunk): apply the thunk named by
	gc-thunk directly, instead of going through a signal handler.
	(scm_gc_async): new variable, points to the GC system-async.
	(scm_init_async): save the GC async as scm_gc_async instead
	of using system_signal_asyncs.
	(scm_gc_vcell): new variable, stores the gc-thunk vcell.

Mon Apr 28 19:14:44 1997  Jim Blandy  <jimb@floss.cyclic.com>

	* Makefile.am (libpath.h, cpp_err_symbols.c, cpp_sig_symbols.c):
	Don't screw up if we're interrupted.
	* Makefile.in: Regeneradet.

Sun Apr 27 17:57:15 1997  Jim Blandy  <jimb@floss.cyclic.com>

	* aclocal.m4: Removed; unnecessary, given changes of Apr 24.

	* Makefile.am (modincludedir): Use "ice-9" instead of "@module@";
	we're not using AM_INIT_GUILE_MODULE any more.
	* Makefile.in: Reneregated.

Thu Apr 24 00:41:08 1997  Jim Blandy  <jimb@floss.cyclic.com>
